# PrimProject

./: .gitignore  PrimUML.mdj  Prim_UML.mdj  Prim_UMLv2.mdj  README.md  prova
Modules+prototypes/: Prim_Strategy
Modules+prototypes/BrightManipulation-v2/: CMakeLists.txt  main.cpp
Modules+prototypes/BrightnessManipulation/: CMakeLists.txt  main.cpp
Modules+prototypes/ImMagPlayground/: CMakeLists.txt  main.cpp
Modules+prototypes/convolution1/: CMakeLists.txt  main.cpp
Modules+prototypes/convolutionFunction/: CMakeLists.txt  main.cpp
Prim/: CMakeLists.txt  EdgeDetection.h  FilterApplyer.cpp  FilterApplyer.h  GaussianBlur.cpp  GaussianBlur.h  ImageElaborator.cpp  ImageElaborator.h  KernelFilter.cpp  KernelFilter.h  RedoManager.cpp  RedoManager.h  UndoManager.cpp  UndoManager.h  main.cpp
Prim/Test/: CMakeLists.txt  UndoTest.cpp
Prim_gui/: CMakeLists.txt  FileSelector.cpp  FileSelector.h  MvcController.cpp  MvcController.h  Prim_gui.pro  main.cpp  mainwindow.ui
Prim_gui/MVC_interfaces/: Observer.h  Subject.h
Prim_gui/MVC_model/: EdgeDetection.cpp  EdgeDetection.h  Emboss.cpp  Emboss.h  FilterApplyer.cpp  FilterApplyer.h  GaussianBlur.cpp  GaussianBlur.h  ImageElaborator.cpp  ImageElaborator.h  KernelFilter.cpp  KernelFilter.h  Sharpen.cpp  Sharpen.h  UndoManager.cpp  UndoManager.h
Prim_gui/MVC_view/: Prim_gui.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui
Prim_gui/Test/: CMakeLists.txt  ConvolutionTest.cpp  runAllTest.cpp
